--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "idb": "^8.0.0",
     "primeflex": "^3.3.1",
     "primereact": "^10.8.3",
     "react": "^18.2.0",
