--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "idb": "^8.0.0",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
