--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "idb": "^8.0.0",
     "primeflex": "^3.3.1",
